networking/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: traefik
  namespace: networking

spec:
  rules:
    - host: pi.hole
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-web
                port:
                  number: 80
